--- a/build.gradle
+++ b/build.gradle
@@ -18,14 +18,26 @@ dependencies {
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+	//Swagger 2
 	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
 	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
-
 	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
 	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
-
 	// https://mvnrepository.com/artifact/io.springfox/springfox-boot-starter
 	implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
+
+	//Testing
+	// https://mvnrepository.com/artifact/junit/junit
+	testImplementation group: 'junit', name: 'junit', version: '4.12'
+	// https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all
+	testImplementation group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+	// https://mvnrepository.com/artifact/org.mockito/mockito-core
+	testImplementation group: 'org.mockito', name: 'mockito-core', version: '1.10.19'
+	// https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path-assert
+	testImplementation group: 'com.jayway.jsonpath', name: 'json-path-assert', version: '2.2.0'
+
+
+
 }
 
 tasks.named('test') {
