--- a/build.gradle
+++ b/build.gradle
@@ -18,25 +18,39 @@ dependencies {
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-	//Swagger 2
 	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
 	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
-	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
-	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+
 	// https://mvnrepository.com/artifact/io.springfox/springfox-boot-starter
 	implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
 
+	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
+	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+
 	//Testing
+	// https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
+	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.0.3'
+
 	// https://mvnrepository.com/artifact/junit/junit
 	testImplementation group: 'junit', name: 'junit', version: '4.12'
-	// https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all
-	testImplementation group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+
 	// https://mvnrepository.com/artifact/org.mockito/mockito-core
 	testImplementation group: 'org.mockito', name: 'mockito-core', version: '1.10.19'
+
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test
+	testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.6.4'
+
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test
+	testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.6.4'
+
+	// https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all
+	testImplementation group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+
+	// https://mvnrepository.com/artifact/org.hamcrest/hamcrest-core
+	testImplementation group: 'org.hamcrest', name: 'hamcrest-core', version: '2.2'
+
 	// https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path-assert
 	testImplementation group: 'com.jayway.jsonpath', name: 'json-path-assert', version: '2.2.0'
-
-
 
 }
 
