--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.hamcrest:hamcrest-core:2.2'
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
@@ -34,24 +35,14 @@ dependencies {
 	// https://mvnrepository.com/artifact/junit/junit
 	testImplementation group: 'junit', name: 'junit', version: '4.12'
 
-	// https://mvnrepository.com/artifact/org.mockito/mockito-core
-	testImplementation group: 'org.mockito', name: 'mockito-core', version: '1.10.19'
-
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test
 	testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.6.4'
-
-	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test
-	testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.6.4'
-
-	// https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all
-	testImplementation group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
-
-	// https://mvnrepository.com/artifact/org.hamcrest/hamcrest-core
-	testImplementation group: 'org.hamcrest', name: 'hamcrest-core', version: '2.2'
 
 	// https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path-assert
 	testImplementation group: 'com.jayway.jsonpath', name: 'json-path-assert', version: '2.2.0'
 
+	// https://mvnrepository.com/artifact/com.h2database/h2
+	testImplementation group: 'com.h2database', name: 'h2', version: '2.1.210'
 }
 
 tasks.named('test') {
