--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/book_db
+    url: jdbc:postgresql://localhost:5432/demo_book
     username: postgres
     password: 123456
   jpa:
