--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
 	id 'java'
 	id 'jacoco'
 	id 'checkstyle'
+//	id 'nu.studer.jooq' version '7.1.1'
 }
 
 group = 'com.example'
@@ -12,13 +13,17 @@ sourceCompatibility = '1.8'
 
 repositories {
 	mavenCentral()
+
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.hamcrest:hamcrest-core:2.2'
+	implementation 'org.wso2.appserver:wso2appserver-samples-tomcat-webapps-jdbc-data-source:5.3.0'
+	implementation 'org.projectlombok:lombok:1.18.20'
 	runtimeOnly 'org.postgresql:postgresql'
+//	implementation "org.springframework.boot:spring-boot-starter-jooq:2.0.2.RELEASE"
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 //	//authentication security
@@ -54,11 +59,18 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.liquibase/liquibase-core
 	implementation group: 'org.liquibase', name: 'liquibase-core', version: '4.9.0'
 
+				//JOOQ
+	// https://mvnrepository.com/artifact/org.jooq/jooq
+	implementation group: 'org.jooq', name: 'jooq', version: '3.2.7'
+
+//	implementation group: 'org.jooq', name: 'jooq-codegen-maven', version: '3.16.5'
+//	// https://mvnrepository.com/artifact/org.springframework/spring-context
+//	implementation group: 'org.springframework', name: 'spring-context', version: '5.2.2.RELEASE'
+//	// https://mvnrepository.com/artifact/org.springframework/spring-jdbc
+//	implementation group: 'org.springframework', name: 'spring-jdbc', version: '5.2.2.RELEASE'
+
 }
 
-jacoco {
-
-}
 test {
 	finalizedBy jacocoTestReport // report is always generated after tests run
 }
@@ -102,3 +114,41 @@ checkstyleTest {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+//jooq {
+//	version = '3.16.4'  // the default (can be omitted)
+//	edition = nu.studer.gradle.jooq.JooqEdition.OSS  // the default (can be omitted)
+//
+//	configurations {
+//		main {  // name of the jOOQ configuration
+//			generateSchemaSourceOnCompilation = true  // default (can be omitted)
+//
+//			generationTool {
+//				jdbc {
+//					driver = 'org.postgresql.Driver'
+//					url = 'jdbc:postgresql://localhost:5432/book_db'
+//					user = 'postgres'
+//					password = '123456'
+//					properties {
+//						property {
+//							key = 'ssl'
+//							value = 'true'
+//						}
+//					}
+//				}
+//				generator {
+////					name = 'org.jooq.codegen.DefaultGenerator'
+////					database {
+////						name = 'org.jooq.meta.postgres.PostgresDatabase'
+////						inputSchema = 'public'
+////					}
+////					target {
+////						packageName = 'com.example.demoBook.jooq'
+////						directory = 'src/main/java'  // default (can be omitted)
+////					}
+//					strategy.name = 'org.jooq.codegen.DefaultGeneratorStrategy'
+//				}
+//			}
+//		}
+//	}
+//}
