--- a/src/main/resources/db/changelog/changes/createTableV001.yaml
+++ b/src/main/resources/db/changelog/changes/createTableV001.yaml
@@ -12,7 +12,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  type: integer
+                  type: INT
                   constraints:
                     primaryKey: true
                     nullable: false
