Adđ function replace JPA

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
   - include:
-      file: /db/changelog/changes/createTable.sql
+      file: /db/changelog/changes/insertBook.sql
+#  - include:
+#      file: /db/changelog/changes/tables.sql
