--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,11 +7,11 @@ spring:
   jooq:
     sql-dialect: POSTGRES
   liquibase:
-    enabled: true
+    enabled: false
 #    change-log: classpath:db/changelog/db.changelog-master.yaml
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: true
     properties:
       hibernate:
