--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,16 @@
 spring:
   datasource:
-    url: ${URL}
-    username: ${USERNAME}
-    password: ${PASSWORD}
+    url: jdbc:postgresql://postgres_db_book:5432/book_db
+    username: postgres
+    password: 123456
     driver-class-name: org.postgresql.Driver
   jooq:
     sql-dialect: POSTGRES
   liquibase:
-    enabled: false
-#    change-log: classpath:db/changelog/db.changelog-master.yaml
+    enabled: true
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
