--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,8 +1,8 @@
 databaseChangeLog:
 #  - include:
 #      file: /db/changelog/changes/createTableV001.yaml
-  - include:
-       file: /db/changelog/changes/tables.sql
+#  - include:
+#       file: /db/changelog/changes/tables.sql
   - include:
       file: /db/changelog/changes/insertBook.sql
   - include:
