--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,11 @@ dependencies {
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-//	//authentication security
-//	implementation 'org.springframework.boot:spring-boot-starter-security'
+	//authentication security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 //	implementation 'org.springframework.security:spring-security-test'
+	testImplementation 'org.springframework.security:spring-security-test:5.6.2'
+
 
 	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
 	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
