--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
 #    url: jdbc:postgresql://postgres_db_book:5432/book_db
     url: ${URL}
-    username: ${USERNAME}
-    password: ${PASSWORD}
+    username: postgres
+    password: 123456
     driver-class-name: org.postgresql.Driver
   jooq:
     sql-dialect: POSTGRES
