--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,6 @@ sourceCompatibility = '1.8'
 
 repositories {
 	mavenCentral()
-
 }
 
 dependencies {
@@ -26,30 +25,17 @@ dependencies {
 
 	//authentication security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-//	implementation 'org.springframework.security:spring-security-test'
 	testImplementation 'org.springframework.security:spring-security-test:5.6.2'
 
-
-	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
+				//swagger2
 	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
-
-	// https://mvnrepository.com/artifact/io.springfox/springfox-boot-starter
 	implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
-
-	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
 	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 
 				//Testing
-	// https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
 	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.0.3'
-
-	// https://mvnrepository.com/artifact/junit/junit
 	testImplementation group: 'junit', name: 'junit', version: '4.12'
-
-	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test
 	testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.6.4'
-
-	// https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path-assert
 	testImplementation group: 'com.jayway.jsonpath', name: 'json-path-assert', version: '2.2.0'
 	testImplementation group: 'com.h2database', name: 'h2', version: '2.1.210'
 
