--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
 #    url: jdbc:postgresql://postgres_db_book:5432/book_db
-    url: jdbc:postgresql://${URLHOST}:5432/book_db
+    url: ${URL}
     username: postgres
-    password: ${PASSWORD}
+    password: 123456
     driver-class-name: org.postgresql.Driver
   jooq:
     sql-dialect: POSTGRES
@@ -20,4 +20,4 @@ spring:
 server:
   error:
     include-message: always
-#  port: 9090
+  port: 8081
