--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
 #    url: jdbc:postgresql://postgres_db_book:5432/book_db
-    url: ${URL}
+    url: jdbc:postgresql://${URLHOST}:5432/book_db
     username: postgres
-    password: 123456
+    password: ${PASSWORD}
     driver-class-name: org.postgresql.Driver
   jooq:
     sql-dialect: POSTGRES
