--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
 #    url: jdbc:postgresql://postgres_db_book:5432/book_db
     url: jdbc:postgresql://${URLHOST}:5432/book_db
-    username: postgres
+    username: ${USERNAME}
     password: ${PASSWORD}
     driver-class-name: org.postgresql.Driver
   jooq:
