--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,8 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 	//authentication security
-//	implementation 'org.springframework.boot:spring-boot-starter-security'
-//	testImplementation 'org.springframework.security:spring-security-test:5.6.2'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	testImplementation 'org.springframework.security:spring-security-test:5.6.2'
 
 				//swagger2
 	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
