add test for controller API V1

--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,9 @@ dependencies {
 				//JOOQ
 	implementation group: 'org.jooq', name: 'jooq', version: '3.13.6'
 
+	implementation group: 'commons-io', name: 'commons-io', version: '2.6'
+
+
 }
 
 test {
