--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,11 @@ services:
     restart: always
     ports:
       - 9090:8080
+    environment:
+      URLHOST: postgres_db_book
+      DB_NAME: book_db
+      USERNAME: postgres
+      PASSWORD: 123456
     depends_on:
       - postgres_db_book
   postgres_db_book:
