--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,10 +1,12 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/book_db
-spring.datasource.username=postgres
-spring.datasource.password=123456
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jooq.sql-dialect=POSTGRES
-spring.liquibase.enabled=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jooq.sql-dialect=POSTGRES
+#spring.liquibase.enabled=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
