--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,8 @@ dependencies {
 
 	implementation group: 'commons-io', name: 'commons-io', version: '2.6'
 
+	implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '5.9.3'
+
 
 }
 
