--- a/build.gradle
+++ b/build.gradle
@@ -93,3 +93,11 @@ checkstyleTest {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+jar {
+	manifest {
+		attributes(
+				'Main-Class': 'com.example.demoBook.DemoBookApplication'
+		)
+	}
+}
