--- a/build.gradle
+++ b/build.gradle
@@ -95,9 +95,8 @@ tasks.named('test') {
 }
 
 jar {
+	enabled = false
 	manifest {
-		attributes(
-				'Main-Class': 'com.example.demoBook.DemoBookApplication'
-		)
+		attributes 'Main-Class': 'com.example.demoBook.DemoBookApplication'
 	}
 }
