--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'org.springframework.boot' version '2.6.4'
+	id 'org.springframework.boot' version '2.7.0'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 	id 'jacoco'
@@ -8,7 +8,7 @@ plugins {
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+sourceCompatibility = '11'
 
 repositories {
 	mavenCentral()
@@ -21,31 +21,30 @@ dependencies {
 	implementation 'org.wso2.appserver:wso2appserver-samples-tomcat-webapps-jdbc-data-source:5.3.0'
 	implementation 'org.projectlombok:lombok:1.18.26'
 	runtimeOnly 'org.postgresql:postgresql'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 	//authentication security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	testImplementation 'org.springframework.security:spring-security-test:5.6.2'
 
 				//swagger2
-	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
-	implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
-	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
+	implementation 'io.springfox:springfox-swagger2:3.0.0'
+	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
 
 				//Testing
-	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.0.3'
-	testImplementation group: 'junit', name: 'junit', version: '4.12'
-	testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.6.4'
-	testImplementation group: 'com.jayway.jsonpath', name: 'json-path-assert', version: '2.2.0'
-	testImplementation group: 'com.h2database', name: 'h2', version: '2.1.210'
+	testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.0.3'
+	testImplementation 'junit:junit:4.13.2'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'com.jayway.jsonpath:json-path-assert:2.2.0'
+	testImplementation 'com.h2database:h2:2.1.210'
 
 				//Liquibase
-	implementation group: 'org.liquibase', name: 'liquibase-core', version: '4.9.0'
+	implementation 'org.liquibase:liquibase-core:4.9.0'
 
 				//JOOQ
-	implementation group: 'org.jooq', name: 'jooq', version: '3.13.6'
+	implementation 'org.jooq:jooq:3.13.6'
 
-	implementation group: 'commons-io', name: 'commons-io', version: '2.6'
+	implementation 'commons-io:commons-io:2.7'
 
 
 }
