Upgrade Spring from 2.7 to 3

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,3 +29,8 @@ logging:
         tools:
           LoggerListener: DEBUG
 
+pringdoc:
+  swagger-ui:
+    path: /swagger-ui-custom.html
+    operationsSorter: method
+
