--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'org.springframework.boot' version '2.7.0'
+	id 'org.springframework.boot' version '3.0.0'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 	id 'jacoco'
@@ -8,7 +8,7 @@ plugins {
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = '17'
 
 repositories {
 	mavenCentral()
@@ -18,18 +18,16 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.hamcrest:hamcrest-core:2.2'
-	implementation 'org.wso2.appserver:wso2appserver-samples-tomcat-webapps-jdbc-data-source:5.3.0'
 	implementation 'org.projectlombok:lombok:1.18.26'
 	runtimeOnly 'org.postgresql:postgresql'
+	implementation 'org.hibernate:hibernate-validator:6.0.0.Final'
 
 	//authentication security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-	testImplementation 'org.springframework.security:spring-security-test:5.6.2'
+	testImplementation 'org.springframework.security:spring-security-test'
 
 				//swagger2
-	implementation 'io.springfox:springfox-swagger2:3.0.0'
-	implementation 'io.springfox:springfox-boot-starter:3.0.0'
-	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
 
 				//Testing
 	testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.0.3'
@@ -39,7 +37,7 @@ dependencies {
 	testImplementation 'com.h2database:h2:2.1.210'
 
 				//Liquibase
-	implementation 'org.liquibase:liquibase-core:4.9.0'
+	implementation 'org.liquibase:liquibase-core:4.20.0'
 
 				//JOOQ
 	implementation 'org.jooq:jooq:3.13.6'
